# camkes

apps/crypto_wallet/: CMakeLists.txt  crypto_wallet.camkes
apps/crypto_wallet/components/Auth/src/: auth.c
apps/crypto_wallet/components/KeyMaster/: Cargo.toml  test.c
apps/crypto_wallet/components/KeyMaster/src/: key_master.c  lib.rs
apps/crypto_wallet/components/User/src/: user.c
