#
# Copyright 2018, Data61
# Commonwealth Scientific and Industrial Research Organisation (CSIRO)
# ABN 41 687 119 230.
#
# This software may be distributed and modified according to the terms of
# the BSD 2-Clause license. Note that NO WARRANTY is provided.
# See "LICENSE_BSD2.txt" for details.
#
# @TAG(DATA61_BSD)
#

[package]
name = "key_master"
version = "0.0.1"
authors = ["Michael Sproul <michael.sproul@data61.csiro.au>"]
description = "Cryptographic key store for CAmkES crypto wallet"

#[dependencies]
#ethkey = { git = "https://github.com/paritytech/parity-ethereum" }

[lib]
name = "key_master"
path = "src/lib.rs"
crate-type = ["staticlib"]
